--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
